--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NasaApp">
-        <activity android:name="com.example.nasaapp.scenes.detail.DetailActivity" />
+        <activity
+            android:name="com.example.nasaapp.scenes.detail.DetailActivity"
+            android:theme="@style/Theme.NasaApp.NoActionBar" />
         <activity android:name="com.example.nasaapp.scenes.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
